; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/st/cw1200/extr_txrx.c_tx_policy_use.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/st/cw1200/extr_txrx.c_tx_policy_use.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tx_policy_cache = type { i32 }
%struct.tx_policy_cache_entry = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tx_policy_cache*, %struct.tx_policy_cache_entry*)* @tx_policy_use to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tx_policy_use(%struct.tx_policy_cache* %0, %struct.tx_policy_cache_entry* %1) #0 {
  %3 = alloca %struct.tx_policy_cache*, align 8
  %4 = alloca %struct.tx_policy_cache_entry*, align 8
  store %struct.tx_policy_cache* %0, %struct.tx_policy_cache** %3, align 8
  store %struct.tx_policy_cache_entry* %1, %struct.tx_policy_cache_entry** %4, align 8
  %5 = load %struct.tx_policy_cache_entry*, %struct.tx_policy_cache_entry** %4, align 8
  %6 = getelementptr inbounds %struct.tx_policy_cache_entry, %struct.tx_policy_cache_entry* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* %7, align 4
  %10 = load %struct.tx_policy_cache_entry*, %struct.tx_policy_cache_entry** %4, align 8
  %11 = getelementptr inbounds %struct.tx_policy_cache_entry, %struct.tx_policy_cache_entry* %10, i32 0, i32 0
  %12 = load %struct.tx_policy_cache*, %struct.tx_policy_cache** %3, align 8
  %13 = getelementptr inbounds %struct.tx_policy_cache, %struct.tx_policy_cache* %12, i32 0, i32 0
  %14 = call i32 @list_move(i32* %11, i32* %13)
  ret void
}

declare dso_local i32 @list_move(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
